--- a/css/estilos.css
+++ b/css/estilos.css
@@ -318,11 +318,10 @@ form p{
         flex-direction: column;
     }
     .contenedorTextConf{
-        /*background:linear-gradient(to bottom, #000000c2, #000000c2);*/
-        width: 100%;
-        height: 100%;
+        width: initial;
+        height: initial;
         text-align: center;
-        align-items: center;
+        justify-content: baseline;
         font-size: 18px;
     }
     .contenedorTextConf div a{
@@ -343,11 +342,11 @@ form p{
     .lugarFecha{
         flex-direction: column;
         align-items: center;
-        height: 165vh;
+        height: 140vh;
     }
     .left{
         width: 100%;
-        height: 30%;
+        height: 50vh;
         background-image: url("../assets/img/ba4.jpg");
         background-size: cover;
         background-position: center;
@@ -355,22 +354,21 @@ form p{
     }
     .right{
         width: 100%;
-        height: 70%;
+        height: 90vh;
     }
     .formularioOrador{
         width: auto;
-        margin: 0;
-        padding: 0;
+        height: initial;
     }
     .footer {
         margin: 1rem 0 0 0%;
         padding: 0;
-        height: auto;
-        width: auto;
+        height: initial;
+        width: initial;
     }
     .contenedorFooter{
-        margin: 0;
-        padding: 0;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         flex-direction: column;
         height: 25vh;
         width: auto;
